glxinfo: fix segfault when core profile is unavailable

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=85199

Signed-off-by: Julien Isorce <j.isorce@samsung.com>
Reviewed-by: Brian Paul <brianp@vmware.com>